--- a/AdaptiveIntegration/AdaptiveIntegration.vcxproj.filters
+++ b/AdaptiveIntegration/AdaptiveIntegration.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="fun.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="concurrent_list.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
