cleaned up cycles that wait for futures

--- a/AdaptiveIntegration/AdaptiveIntegration.vcxproj
+++ b/AdaptiveIntegration/AdaptiveIntegration.vcxproj
@@ -150,7 +150,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="concurrent_list.h" />
+    <ClInclude Include="threadsafe_stack.h" />
     <ClInclude Include="fun.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
