Implemented Pool with globalQ and pending stack. Slow as hell

--- a/AdaptiveIntegration/AdaptiveIntegration.vcxproj
+++ b/AdaptiveIntegration/AdaptiveIntegration.vcxproj
@@ -151,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Point.h" />
+    <ClInclude Include="threadsafe_queue.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
